--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="container-creadores">
                 <div class="creador">
                     <img src="imgs/placeholder.png" alt="Creador 1" class="img-creador"> <!-- Imagen del primer creador -->
-                    <p>Descripción del creador 1.<br> To el textazo, este creador es el de KA TO TOO</p>
+                    <p>José Antonio Becerra<br> Apasionado por la informática y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
                 </div>
                 <div class="creador">
-                    <p>Descripción del creador 2.<br> To el textazo, este creador es el de acompañame a hacer la compra</p>
+                    <p>Antonio Jesus Gonzalez<br> Con estudios en Microsistemas Informáticos y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
                     <img src="imgs/placeholder.png" alt="Creador 2" class="img-creador"> <!-- Imagen del segundo creador -->
                 </div>
             </div>
@@ -36,7 +36,7 @@
             <div class="container-projects">
                 <div class="card">
                     <img src="imgs/mecanografia.png" alt="Proyecto 1" class="project-image project-image-mecanografia">
-                    <h3>Mecanografía Simple en español</h3>
+                    <h3>1 - Mecanografía Simple en español</h3>
                     <div class="buttons">
                         <button class="github-button" onclick="window.open('link-al-codigo-1', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="card">
                     <img src="imgs/3_en_raya.png" alt="Proyecto 2" class="project-image">
-                    <h3>Juego: Tres en raya. Un jugador</h3>
+                    <h3>2 - Juego: Tres en raya. Un jugador</h3>
                     <div class="buttons">
                         <button class="github-button" onclick="window.open('link-al-codigo-2', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
