--- a/index.html
+++ b/index.html
@@ -33,18 +33,20 @@
                 </div>
             </div>
 
+            <h1 class="titulo-proyectos">Proyectos</h1>
+
             <div class="container-projects">
                 <div class="card">
-                    <img src="imgs/mecanografia.png" alt="Proyecto 1" class="project-image project-image-mecanografia">
-                    <h3>1 - Mecanografía Simple en español</h3>
+                    <img src="imgs/3_en_raya.png" alt="Proyecto 2" class="project-image">
+                    <h3>2 - Juego: Tres en raya. Un jugador</h3>
                     <div class="buttons">
-                        <button class="github-button" onclick="window.open('link-al-codigo-1', '_blank')">
+                        <button class="github-button" onclick="window.open('link-al-codigo-2', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.73-.01-1.43-2.24.49-2.71-1.08-2.71-1.08-.36-.91-.88-1.15-.88-1.15-.72-.49.05-.48.05-.48.8.06 1.22.82 1.22.82.71 1.22 1.86.87 2.31.66.07-.52.28-.87.51-1.07-1.78-.2-3.65-.89-3.65-3.95 0-.87.31-1.58.82-2.14-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.33-.27 2.01-.27.68 0 1.37.09 2.01.27 1.53-1.03 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.14 0 3.06-1.87 3.75-3.65 3.95.29.25.55.74.55 1.49 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38C13.71 14.53 16 11.54 16 8c0-4.42-3.58-8-8-8z"></path>
                             </svg>
                             Código
                         </button>
-                        <button class="demo-button" onclick="window.open('1 - Mecanografia/index.html', '_blank')">
+                        <button class="demo-button" onclick="window.open('2 - Tres en raya/index.html', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="2" style="margin-right: 5px;">
                                 <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
                                 <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
@@ -60,17 +62,18 @@
                         </button>
                     </div>
                 </div>
+
                 <div class="card">
-                    <img src="imgs/3_en_raya.png" alt="Proyecto 2" class="project-image">
-                    <h3>2 - Juego: Tres en raya. Un jugador</h3>
+                    <img src="imgs/mecanografia.png" alt="Proyecto 1" class="project-image project-image-mecanografia">
+                    <h3>1 - Mecanografía Simple en español</h3>
                     <div class="buttons">
-                        <button class="github-button" onclick="window.open('link-al-codigo-2', '_blank')">
+                        <button class="github-button" onclick="window.open('link-al-codigo-1', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.73-.01-1.43-2.24.49-2.71-1.08-2.71-1.08-.36-.91-.88-1.15-.88-1.15-.72-.49.05-.48.05-.48.8.06 1.22.82 1.22.82.71 1.22 1.86.87 2.31.66.07-.52.28-.87.51-1.07-1.78-.2-3.65-.89-3.65-3.95 0-.87.31-1.58.82-2.14-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.33-.27 2.01-.27.68 0 1.37.09 2.01.27 1.53-1.03 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.14 0 3.06-1.87 3.75-3.65 3.95.29.25.55.74.55 1.49 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38C13.71 14.53 16 11.54 16 8c0-4.42-3.58-8-8-8z"></path>
                             </svg>
                             Código
                         </button>
-                        <button class="demo-button" onclick="window.open('2 - Tres en raya/index.html', '_blank')">
+                        <button class="demo-button" onclick="window.open('1 - Mecanografia/index.html', '_blank')">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="2" style="margin-right: 5px;">
                                 <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
                                 <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
