--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>José Antonio Becerra<br> Apasionado por la informática y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
                 </div>
                 <div class="creador">
-                    <p>Antonio Jesus Gonzalez<br> Con estudios en Microsistemas Informáticos y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
+                    <p>Antonio Jesús Gonzalez<br> Con estudios en Microsistemas Informáticos y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
                     <img src="imgs/placeholder.png" alt="Creador 2" class="img-creador"> <!-- Imagen del segundo creador -->
                 </div>
             </div>
