--- a/index.html
+++ b/index.html
@@ -7,35 +7,56 @@
         <title>100 Proyectos con JavaScript!!</title>
     </head>
     <body>
-        <header>
+        <script src="js/main.js"></script>
+        <header id="header">
             <div class="container-header">
-                <button onclick="location.href='https://github.com/JoseProgrammer25/100proyectosConJS'">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="36" height="36">
-                        <path d="M5.315 2.1c.791 -.113 1.9 .145 3.333 .966l.272 .161l.16 .1l.397 -.083a13.3 13.3 0 0 1 4.59 -.08l.456 .08l.396 .083l.161 -.1c1.385 -.84 2.487 -1.17 3.322 -1.148l.164 .008l.147 .017l.076 .014l.05 .011l.144 .047a1 1 0 0 1 .53 .514a5.2 5.2 0 0 1 .397 2.91l-.047 .267l-.046 .196l.123 .163c.574 .795 .93 1.728 1.03 2.707l.023 .295l.007 .272c0 3.855 -1.659 5.883 -4.644 6.68l-.245 .061l-.132 .029l.014 .161l.008 .157l.004 .365l-.002 .213l-.003 3.834a1 1 0 0 1 -.883 .993l-.117 .007h-6a1 1 0 0 1 -.993 -.883l-.007 -.117v-.734c-1.818 .26 -3.03 -.424 -4.11 -1.878l-.535 -.766c-.28 -.396 -.455 -.579 -.589 -.644l-.048 -.019a1 1 0 0 1 .564 -1.918c.642 .188 1.074 .568 1.57 1.239l.538 .769c.76 1.079 1.36 1.459 2.609 1.191l.001 -.678l-.018 -.168a5.03 5.03 0 0 1 -.021 -.824l.017 -.185l.019 -.12l-.108 -.024c-2.976 -.71 -4.703 -2.573 -4.875 -6.139l-.01 -.31l-.004 -.292a5.6 5.6 0 0 1 .908 -3.051l.152 -.222l.122 -.163l-.045 -.196a5.2 5.2 0 0 1 .145 -2.642l.1 -.282l.106 -.253a1 1 0 0 1 .529 -.514l.144 -.047l.154 -.03z"></path>
-                    </svg>
-                </button>
+                <h1 style="color: white;">JS<span style="color: yellow;">100</span></h1>
+                <ul>
+                    <li><a href="#header">Inicio</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Acerca de</a></li>
+                </ul>>
             </div>
         </header>
         <main>
-            <div class="container-titulo">
-                <h1><span class="effect-letter">100</span><br>Proyectos con JavaScript!!</h1>
-                <img src="imgs/image_js.png">
-            </div>
-            
-            <div class="container-creadores">
-                <div class="creador">
-                    <img src="imgs/placeholder.png" alt="Creador 1" class="img-creador"> <!-- Imagen del primer creador -->
-                    <p>José Antonio Becerra<br> Apasionado por la informática y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
-                </div>
-                <div class="creador">
-                    <p>Antonio Jesús Gonzalez<br> Con estudios en Microsistemas Informáticos y actualmente estudiante<br> de Grado Superior de Desarrollo de Aplicaciones Web</p>
-                    <img src="imgs/placeholder.png" alt="Creador 2" class="img-creador"> <!-- Imagen del segundo creador -->
-                </div>
+            <div class="container-main">
+                <h1><span style="color: yellow;">100</span> Proyectos con JavaScript</h1>
+                <p>Explora. Aprende. Crea.</p>
+                <a href="https://github.com/JoseProgrammer25/100proyectosConJS">Explora el codigo</a>
             </div>
 
-            <h1 class="titulo-proyectos">Proyectos</h1>
-
+            <h1 class="titulo-projects">Proyectos</h1>
             <div class="container-projects">
+
+                <div class="card">
+                    <img src="imgs/3_en_raya.png" alt="Proyecto 2" class="project-image">
+                    <h3>Proximamente...</h3>
+                    <div class="buttons">
+                        <button class="github-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
+                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.73-.01-1.43-2.24.49-2.71-1.08-2.71-1.08-.36-.91-.88-1.15-.88-1.15-.72-.49.05-.48.05-.48.8.06 1.22.82 1.22.82.71 1.22 1.86.87 2.31.66.07-.52.28-.87.51-1.07-1.78-.2-3.65-.89-3.65-3.95 0-.87.31-1.58.82-2.14-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.33-.27 2.01-.27.68 0 1.37.09 2.01.27 1.53-1.03 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.14 0 3.06-1.87 3.75-3.65 3.95.29.25.55.74.55 1.49 0 1.07-.01 1.93-.01 2.19 0 .21.15.46.55.38C13.71 14.53 16 11.54 16 8c0-4.42-3.58-8-8-8z"></path>
+                            </svg>
+                            Código
+                        </button>
+                        <button class="demo-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="20" height="20" stroke-width="2" style="margin-right: 5px;">
+                                <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
+                                <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
+                                <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4"></path>
+                                <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4"></path>
+                                <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4"></path>
+                                <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4"></path>
+                                <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                            </svg>
+                            Demo
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Introducir mas si es necesario -->
+
                 <div class="card">
                     <img src="imgs/3_en_raya.png" alt="Proyecto 2" class="project-image">
                     <h3>2 - Juego: Tres en raya. Un jugador</h3>
@@ -62,7 +83,7 @@
                         </button>
                     </div>
                 </div>
-
+                
                 <div class="card">
                     <img src="imgs/mecanografia.png" alt="Proyecto 1" class="project-image project-image-mecanografia">
                     <h3>1 - Mecanografía Simple en español</h3>
@@ -88,8 +109,8 @@
                             Demo
                         </button>
                     </div>
+                </div>    
                 </div>
-                <!-- Agrega más cards según sea necesario -->
             </div>
         </main>
     </body>
