modificacion de css

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <div class="container-projects">
 
                 <div class="card">
-                    <img src="imgs/3_en_raya.png" alt="Proyecto 2" class="project-image">
-                    <h3>Proximamente...</h3>
+                    <h3>3. Proximamente...</h3>
                     <div class="buttons">
                         <button class="github-button">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
